[package]
name = "frog_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
frogcore = {path="../frogcore"}

clap = { version = "4.5.21", features = ["cargo", "derive"] }
csv = "1.3.1"
rand = "0.9"
rand_chacha = "0.9.0"
rand_distr = { version = "0.5", features = ["serde"] }
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
