[package]
name = "frogcore"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "main_bench"
harness = false

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
rmp-serde = "1.3.0"
serde_json = "1.0.138"
thiserror = "2.0.11"
rand = { version = "0.9", features = [], default-features = false}
rand_chacha = "0.9.0"
rand_distr = { version = "0.5", features = ["serde"] }
